tests/expectations/parser/functions/const_public_param_fail.out
Error [EPAR0370005]: expected an identifier, ')', 'constant', 'private', 'public' -- found 'const'
    --> test:4:14
     |
   4 | fn x(x: u32, const public y: i32) {
     |              ^^^^^
